[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scenes/CraftingScreen.gd" type="Script" id=1]
[ext_resource path="res://Fonts/ATHLS___.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://Fonts/TYPEWR_B.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://assets/Weapons+Items/Bow.png" type="Texture" id=4]
[ext_resource path="res://assets/Wood.png" type="Texture" id=5]
[ext_resource path="res://assets/HotbarOutline.png" type="Texture" id=6]
[ext_resource path="res://assets/Weapons+Items/SwordFinal.png" type="Texture" id=7]
[ext_resource path="res://assets/Iron.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[node name="CraftingScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CraftingLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -78.5
margin_top = 44.0
margin_right = 78.5
margin_bottom = 109.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
text = "Crafting"

[node name="Bow" type="Control" parent="."]
editor/display_folded = true

[node name="BowBuy" type="Button" parent="Bow"]
margin_left = 665.766
margin_top = 116.613
margin_right = 739.766
margin_bottom = 156.613
custom_fonts/font = SubResource( 2 )
text = "Buy"

[node name="BowIcon" type="TextureRect" parent="Bow"]
margin_left = 349.641
margin_top = 103.1
margin_right = 413.641
margin_bottom = 167.1
texture = ExtResource( 4 )

[node name="Resource1" type="Label" parent="Bow"]
margin_left = 443.269
margin_top = 128.897
margin_right = 475.269
margin_bottom = 142.897
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "x 3"

[node name="Resource1Icon" type="TextureRect" parent="Bow"]
margin_left = 406.675
margin_top = 120.028
margin_right = 433.675
margin_bottom = 147.028
texture = ExtResource( 5 )
expand = true

[node name="Outline" type="TextureRect" parent="Bow"]
margin_left = 346.186
margin_top = 100.175
margin_right = 660.186
margin_bottom = 170.175
texture = ExtResource( 6 )
expand = true

[node name="Sword" type="Control" parent="."]
editor/display_folded = true

[node name="SwordBuy" type="Button" parent="Sword"]
margin_left = 667.313
margin_top = 191.67
margin_right = 741.313
margin_bottom = 231.67
custom_fonts/font = SubResource( 2 )
text = "Buy"

[node name="SwordIcon" type="TextureRect" parent="Sword"]
margin_left = 359.613
margin_top = 176.255
margin_right = 423.613
margin_bottom = 240.255
texture = ExtResource( 7 )

[node name="Resource1" type="Label" parent="Sword"]
margin_left = 444.817
margin_top = 203.954
margin_right = 476.817
margin_bottom = 224.954
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "x 1
"

[node name="Resource1Icon" type="TextureRect" parent="Sword"]
margin_left = 408.223
margin_top = 195.085
margin_right = 435.223
margin_bottom = 222.085
texture = ExtResource( 5 )
expand = true

[node name="Resource2" type="Label" parent="Sword"]
margin_left = 529.676
margin_top = 204.92
margin_right = 561.676
margin_bottom = 237.92
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "x 3

"

[node name="Resource2Icon" type="TextureRect" parent="Sword"]
margin_left = 475.645
margin_top = 184.485
margin_right = 522.645
margin_bottom = 231.485
texture = ExtResource( 8 )
expand = true

[node name="Outline" type="TextureRect" parent="Sword"]
margin_left = 347.734
margin_top = 175.233
margin_right = 661.734
margin_bottom = 245.233
texture = ExtResource( 6 )
expand = true
[connection signal="pressed" from="Bow/BowBuy" to="." method="_on_BowBuy_pressed"]
[connection signal="pressed" from="Sword/SwordBuy" to="." method="_on_SwordBuy_pressed"]
